<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
<string name="AboutVersionName">"版本号：V"</string>
<string name="AboutVersion">支付宝钱包</string>
<string name="AboutCopyrightNameOne">支付宝 版权所有</string>
<string name="AboutCopyrightNameTwo">"Copyright © 2004 - 2013 Alipay.com co.,ltd"</string>
<string name="AboutCopyrightNameThree">All Rights Reserved.</string>
<string name="AboutCopyright">适用于Android2.0及以上操作系统 。</string>
<string name="AboutCopyrightDialog">"客服邮箱:\nservice-mobile@alipay.com\n\n支付宝 版权所有\nCopyright © 2004-2013\nAlipay.com.All Rights Reserved."</string>
<string name="FeedbackText">"请输入你的问题或意见："</string>
<string name="SubmitFeedbackContentButtonText">"提交反馈"</string>
<string name="InputTelNumText">"请输入你的手机号码"</string>
<string name="FeedbackContentWarning">"/240字"</string>
<string name="DownloadProcessing">"正在下载"</string>
<string name="CancelDownload">"你是否确定要退出下载更新？"</string>
<string name="FailSaveFile">"保存文件失败。"</string>
<string name="FailDownloadFile">"下载失败。"</string>
<string name="LoginTaobaoHint">"账户名(手机号/会员名)"</string>
<string name="LoginAlipayHint">"账户名(邮箱/手机号)     "</string>
<string name="LoginPwdHint">"登录密码"</string>
<string name="IdCardHint">"身份证号码"</string>
<string name="IdCardTip">"请输入你进行实名认证时使用的证件号码"</string>
<string name="app_name">"支付宝钱包"</string>
<string name="UserLoginProcessing">"正在登录..."</string>
<string name="marketUpgrading">"正在升级%s..."</string>
<string name="tipsForUnInitedVoucher">"您还没有卡券，快去“%s”找找。"</string>
<string name="ExitDialogInfo">"你是否要退出支付宝钱包?"</string>
<string name="Yuan">元</string>
<string name="Yes">"是"</string>
<string name="No">"否"</string>
<string name="Ensure">"确 定"</string>
<string name="Cancel">"取 消"</string>
<string name="More">"更 多..."</string>
<string name="WarningDataCheck">"因当前手机的日期和时间不对，造成连接网络失败，请检查设置。"</string>
<string name="Register">"注册"</string>
<string name="Retrieve">"找回登录密码"</string>
<string name="ReadProtocol">"阅读注册协议"</string>
<string name="DeleteAccountTitle">"提示"</string>
<string name="DeleteAccountMessage">"是否从列表中删除此账户?"</string>
<string name="PleaseWait">请稍候...</string>
<string name="WarngingString">"提 醒"</string>
<string name="ErrorString">"错误"</string>
<string name="NoEmptyFeedbackContent">"输入的反馈内容不能为空。"</string>
<string name="NoEmptyFeedbackTelNum">"手机号码不能为空。"</string>
<string name="SubmitingFeedbackContent">"正在提交，请稍候..."</string>
<string name="SubmitFeedbackContentFail">"提交反馈失败，请稍后再试。"</string>
<string name="SubmitFeedbackContentSucceed">"意见反馈成功。"</string>
<string name="ErrorInputTelNum">"手机号码应为11位数字。"</string>
<string name="NoEmptyAccountName">账户不能为空。</string>
<string name="NoEmptyPassword">"密码不能为空。"</string>
<string name="CheckNetwork">"无法连接网络，请检查设置。"</string>
<string name="PayPasswordEmpty">"请输入支付密码。"</string>
<string name="AmountEmpty">"充值金额不能为空。"</string>
<string name="PhoneNOEmpty">手机号码不能为空。</string>
<string name="WarningInvalidAccountName">账户必须是手机号码或email。</string>
<string name="WarningInvalidLoginPassword">"密码由6-20个英文字母、数字或符号组成。"</string>
<string name="WarningPhoneNumberFormatError">手机号码应为11位数字。</string>
<string name="WarningRealNameEmpty">"真实姓名不能为空"</string>
<string name="WarningInvalidRealName">"用户名只能由汉字和大写字母构成。"</string>
<string name="WarningCCRInvalidRealName">"用户名只能由大写字母、汉字、空格和.构成。"</string>
<string name="WarningRealNameOutRange">"真实姓名长度必须在2到32位以内，请重新填写。"</string>
<string name="WarningCCRAcountOutRange">"真实姓名长度必须在2到20位以内，请重新填写。"</string>
<string name="WarningIdCardEmpty">"身份证号不能为空"</string>
<string name="WarningInvalidIdCard">"身份证号码格式不正确。"</string>
<string name="WarningBankIdEmpty">"银行账号不能为空"</string>
<string name="WarningInvalidBankId">"银行账号格式不正确。"</string>
<string name="MenuHome">"主页"</string>
<string name="MenuNologin">"登录/注册"</string>
<string name="MenuStart">"登录"</string>
<string name="MenuRegistration">"注册"</string>
<string name="MenuUpdate">"检测更新"</string>
<string name="MenuHelp">"帮助"</string>
<string name="MenuNotifiSetting">"通知设置"</string>
<string name="MenuUserFeedback">"用户反馈"</string>
<string name="MenuAbout">"关于"</string>
<string name="MenuExit">"退 出"</string>
<string name="Save">"保存"</string>
<string name="MenuLogOut">账号退出</string>
<string name="switchAccount">切换账户</string>
<string name="RecommendApp">推荐应用</string>
<string name="ON">开</string>
<string name="OFF">关</string>
<string name="NotificationReceive">"是否接收通知"</string>
<string name="NotificationVibratorRemind">"震动提醒"</string>
<string name="NotificationVoiceRemind">"声音提醒"</string>
<string name="NotificationTimePeriod">"设置接收时间段："</string>
<string name="NotificationDialogTitle">"设置接收通知时间段"</string>
<string name="TimeInputError1">"请输入0-24之间的整数。"</string>
<string name="TimeInputError2">"开始时间需小于结束时间。"</string>
<string name="DefaultTimePeriod">"9:00-23:00"</string>
<string name="DialogFrontTimeText">":00  至    "</string>
<string name="DialogBehindTimeText">":00"</string>
<string name="DialogSetting">"设置"</string>
<string name="DialogCancel">"取消"</string>
<string name="PushSettingError">"无法连接到网络，设置修改失败"</string>
<string name="PayYourAccountCheckButtonString">"下一步"</string>
<string name="PayPayingPassword">"支付密码："</string>
<string name="PayPayingPasswordHint">"请输入支付密码"</string>
<string name="PayPayingAccountHint">"对方支付宝账户"</string>
<string name="AccountQueryAccountDetail">"单笔收支明细"</string>
<string name="AccountQueryInfoToday">"当天收支"</string>
<string name="AccountQueryInfoThisWeek">"最近一周收支"</string>
<string name="AccountQueryInfoThisMonth">"最近一月收支"</string>
<string name="AccountQueryFlowNumber">"    流水号："</string>
<string name="AccountQueryType">"        类型："</string>
<string name="AccountQueryMoney">"        收入："</string>
<string name="AccountQueryOut">"        支出："</string>
<string name="AccountQuerySite">"支付方式："</string>
<string name="AccountQueryTime">"        时间："</string>
<string name="AccountQueryBalance">"        余额："</string>
<string name="AccountQueryNote">"        备注："</string>
<string name="DealQueryGetingDetailInfo">"读取详细信息中，请稍候..."</string>
<string name="DealQueryDealOK">"交易成功"</string>
<string name="DealQueryDealInfo">"交易信息"</string>
<string name="DealQueryWareName">"商品名称："</string>
<string name="DealQueryDealMoney">"金        额："</string>
<string name="DealQueryDealAction">"交易行为："</string>
<string name="DealQueryDealStatus">"交易状态："</string>
<string name="DealQueryDealAgent">"代付人："</string>
<string name="DealQueryFrom">"来        自："</string>
<string name="DealQueryDealObject">"交易对方："</string>
<string name="DealQueryDealType">"交易类型："</string>
<string name="DealQueryOrderNumber">"订  单  号："</string>
<string name="DealQueryDealNumber">"交  易  号："</string>
<string name="DealQueryDealTime">"成交时间："</string>
<string name="DealQueryCarryInfo">"物流信息"</string>
<string name="DealQueryReceiveAddress">"收货地址："</string>
<string name="DealQueryCarryCo">"物流公司："</string>
<string name="DealQueryYourName">"你的户名："</string>
<string name="DealQueryPaidMoney">"应付总价："</string>
<string name="DealQueryUseableBalance">"可用余额："</string>
<string name="DealQueryPayingPasswordHint">"支付密码："</string>
<string name="DealQueryEnsurePaying">"确认付款"</string>
<string name="LifepayQueryEnsurePaying">"确认缴费"</string>
<string name="DealQueryConfirmReceived">"确认收货"</string>
<string name="DealQueryRemindSeller">"提醒卖家发货"</string>
<string name="RemindReceiver">"提醒对方收款"</string>
<string name="DealQueryWaitPayingResult">"WAIT_BUYER_PAY"</string>
<string name="DealQueryWaitSellerConfirmTradResult">"WAIT_SELLER_CONFIRM_TRADE"</string>
<string name="DealQueryWaitSysConfirmPayResult">"WAIT_SYS_CONFIRM_PAY"</string>
<string name="DealQueryWaitSellerSendGoodsResult">"WAIT_SELLER_SEND_GOODS"</string>
<string name="DealQueryWaitBuyerConfirmGoodsResult">"WAIT_BUYER_CONFIRM_GOODS"</string>
<string name="DealQueryWaitSysPaySellerResult">"WAIT_SYS_PAY_SELLER"</string>
<string name="DealQueryTradeFinishedResult">"TRADE_FINISHED"</string>
<string name="DealQueryTradeClosedResult">"TRADE_CLOSED"</string>
<string name="DealQueryTradeRefuseResult">"TRADE_REFUSE"</string>
<string name="DealQueryTradeRefuseDealingResult">"TRADE_REFUSE_DEALING"</string>
<string name="DealQueryTradeCancelResult">"TRADE_CANCEL"</string>
<string name="DealQueryTradePendingResult">"TRADE_PENDING"</string>
<string name="DealQueryTradeSuccessResult">"TRADE_SUCCESS"</string>
<string name="DealQueryBuyerPreAuthResult">"BUYER_PRE_AUTH"</string>
<string name="DealQueryCODWaitSellerSendGoodsResult">"COD_WAIT_SELLER_SEND_GOODS"</string>
<string name="DealQueryCODWaitBuyerPayResult">"COD_WAIT_BUYER_PAY"</string>
<string name="DealQueryCODWaitSysPaySellerResult">"COD_WAIT_SYS_PAY_SELLER"</string>
<string name="AccountInputAccountNumber">"账户名："</string>
<string name="PhoneInputNext">"下一步"</string>
<string name="PhoneBindingHint">请输入需要绑定的手机号码</string>
<string name="PhoneBindingEnsureButtonName">确定</string>
<string name="PhoneBindingSuccessful">"绑定手机成功"</string>
<string name="AccountBindingOK">"账户绑定成功"</string>
<string name="PhoneBindingWaitingMessage">"绑定中，请稍候..."</string>
<string name="CashRegisterTitle">"支付宝收银台"</string>
<string name="PucPayReLogin">登录超时，请重新登录</string>
<string name="MEMO_411">"请补全你的资料，否则将不能启用你的支付宝账户。"</string>
<string name="Save_Success">"保存成功。你的支付宝账户已启用。"</string>
<string name="Save_Success_Title">"补全成功"</string>
<string name="CardActiveMsg1">"未激活"</string>
<string name="CardActiveMsg2">"等待签约"</string>
<string name="CardActive">激 活</string>
<string name="CardActiveSucess">成功激活</string>
<string name="HaveCardsText">"你已拥有的支付宝卡通："</string>
<string name="NoCardsText">"你还未拥有支付宝卡通："</string>
<string name="CardActiveSucessInfo">你现在可以方便的使用支付宝卡通来充值、付款、取现等服务。</string>
<string name="CardApplyStartAccount">"“支付宝卡通”服务，需要和银行签约才能开通，请选择银行开始签约申请流程；"</string>
<string name="CardApplyAccount">你选择申请的是</string>
<string name="CardApplyAccount2">卡通。</string>
<string name="CardApplyEffer">"你申请"</string>
<string name="CardApplyEffer1">"信息已提交，还剩最后一步。"</string>
<string name="CardApplyUserName">支付宝账户：</string>
<string name="ApplyRealNameTitleStr">真实姓名：</string>
<string name="ApplyIdentifyNumberStr">身份证号：</string>
<string name="CardApplyNext">下一步</string>
<string name="ApplyCardApply">提交申请</string>
<string name="ApplyCardApplySuccess">成功提交卡通申请</string>
<string name="CardBankActMsg_ACTIVATION">"已开通"</string>
<string name="CardBankActMsg_UNACTIVATION">"未激活"</string>
<string name="CardBankActMsg_WAITSIGNUP">"等待签约"</string>
<string name="CardBankActMsg_NEW">"开通卡通"</string>
<string name="CardBankActMsg_NEWItemString">"开通新支付宝卡通"</string>
<string name="Read"><u>阅读</u></string>
<string name="AgentPayDetailPrompt">以下付款是为他人付款，商品或者服务不归你所有，请仔细确认信息后再付款，以免造成资金损失。</string>
<string name="AgentPayApplicantName">代付申请人：</string>
<string name="AgentPayMoney">金额：</string>
<string name="AgentPayApplyMemo">留言：</string>
<string name="AgentPayGoodsName">商品名称：</string>
<string name="AgentPaySellerName">收款方：</string>
<string name="AgentPayTradeNo">交易号：</string>
<string name="AgentPayCreatedTime">创建时间：</string>
  <string name="AppMore">更多</string>
  <string name="charge_standar">收费标准</string>
  <string name="vipAccount">金账户用户</string>
  <string name="realNameAccount">实名认证用户</string>
  <string name="normalAccount">非实名人认证用户</string>
  <string name="free_for_vip">"免费交易流量：          20000元/月"</string>
  <string name="charge_for_service">"超出金额服务费率：  0.5%"</string>
  <string name="max_for_service">"服务费上限：              25.00元/笔"</string>
  <string name="min_for_service">"服务费下限：              1.00元/笔"</string>
  <string name="free_for_realName">"免费交易流量：          10000元/月"</string>
  <string name="free_for_normal">"免费交易流量：          1000元/月"</string>
  <string name="userHelp">帮助</string>
  <string name="userFeedback">意见反馈</string>
  <string name="month">月份</string>
  <string name="year">年份</string>
  <string name="cvv2">卡背面三位数字</string>
  <string name="express_mobiebinded">此卡在银行预留的手机号码</string>
  <string name="express_accountname">银行卡开户姓名</string>
  <string name="express_agree">同意支付宝快捷支付协议</string>
  <string name="express_accountID">身份证号</string>
  <string name="express_sign_ccdatealert">输入卡正面有效期，如06／12</string>
</resources>